# NEW_TG_BOT

./: .envsample  .gitignore  Dockerfile  README.txt  access.txt  bot8.py  bot9.py  data.json  docker-compose.yaml  docker-compose.yml  fragm1.txt  fragments11.txt  pyproject.toml  questions.db  test1.ipynb  users.txt  vec.py  vec1.py  vec2.py  vec3.py  vec4.py  vectorize1.py
.github/workflows/: docker-image.yaml  docker-image.yml
